done and dusted

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.log4j-1.2.17.jar=/home/wolfpack/Downloads/apache-log4j-1.2.17/log4j-1.2.17.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.log4j-1.2.17.jar}:\
